welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: value gauche is not a member of Unit
			gauche()gauche()
                                ^